// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadTemplate should work 1`] = `
Array [
  Array [
    "/tmp/sdk/rollup.config.js",
    "import { rollupFactory } from \\"@next-core/rollup-config-factory\\";

export default rollupFactory({
  umdName: \\"CdSdk\\",
  copyFiles: [
    {
      src: \\"contract.json\\",
      dest: \\"dist\\",
    },
  ],
});
",
  ],
  Array [
    "/tmp/sdk/src/wrapper.ts",
    "export interface ResponseBodyWrapper<T> {
  code: number;
  data: T;
  error?: string;
  message?: string;
}

export interface ResponseListWrapper<T> {
  list: T[];
  page: number;
  page_size: number;
  total: number;
}
",
  ],
  Array [
    "/tmp/sdk/tsconfig.json",
    "{
  \\"extends\\": \\"../../tsconfig.json\\",
  \\"include\\": [\\"./src\\", \\"../../declarations\\"]
}
",
  ],
  Array [
    "/tmp/sdk/package.json",
    "{
  \\"name\\": \\"@sdk/cd-sdk\\",
  \\"version\\": \\"1.2.3\\",
  \\"description\\": \\"SDK for Cd\\",
  \\"homepage\\": \\"https://github.com/easyops-cn/next-core/tree/master/sdk/cd-sdk\\",
  \\"license\\": \\"GPL-3.0\\",
  \\"main\\": \\"dist/index.bundle.js\\",
  \\"module\\": \\"dist/index.esm.js\\",
  \\"typings\\": \\"dist/types/index.d.ts\\",
  \\"files\\": [
    \\"dist\\",
    \\"deploy\\"
  ],
  \\"scripts\\": {
    \\"clean\\": \\"rimraf dist\\",
    \\"prestart\\": \\"npm run clean\\",
    \\"start\\": \\"concurrently -k -n tsc,build \\\\\\"npm run start:types\\\\\\" \\\\\\"npm run start:rollup\\\\\\"\\",
    \\"start:rollup\\": \\"cross-env NODE_ENV='development' rollup --watch --config rollup.config.js\\",
    \\"start:types\\": \\"tsc --watch --emitDeclarationOnly --declaration --declarationDir dist/types\\",
    \\"prebuild\\": \\"npm run clean\\",
    \\"build\\": \\"npm run build:types && npm run build:rollup\\",
    \\"build:rollup\\": \\"cross-env NODE_ENV='production' rollup --config rollup.config.js\\",
    \\"build:types\\": \\"tsc --emitDeclarationOnly --declaration --declarationDir dist/types\\",
    \\"test\\": \\"cross-env NODE_ENV='test' jest\\",
    \\"test:ci\\": \\"cross-env NODE_ENV='test' CI=true jest\\"
  },
  \\"sideEffects\\": false,
  \\"peerDependencies\\": {
    \\"@next-core/brick-http\\": \\"*\\"
  }
}
",
  ],
]
`;

exports[`loadTemplate should work for public scope 1`] = `
Array [
  Array [
    "/tmp/sdk/rollup.config.js",
    "import { rollupFactory } from \\"@next-core/rollup-config-factory\\";

export default rollupFactory({
  umdName: \\"CdSdk\\",
  copyFiles: [
    {
      src: \\"contract.json\\",
      dest: \\"dist\\",
    },
  ],
});
",
  ],
  Array [
    "/tmp/sdk/src/wrapper.ts",
    "export interface ResponseBodyWrapper<T> {
  code: number;
  data: T;
  error?: string;
  message?: string;
}

export interface ResponseListWrapper<T> {
  list: T[];
  page: number;
  page_size: number;
  total: number;
}
",
  ],
  Array [
    "/tmp/sdk/tsconfig.json",
    "{
  \\"extends\\": \\"../../tsconfig.json\\",
  \\"include\\": [\\"./src\\", \\"../../declarations\\"]
}
",
  ],
  Array [
    "/tmp/sdk/package.json",
    "{
  \\"name\\": \\"@next-sdk/cd-sdk\\",
  \\"version\\": \\"1.2.3\\",
  \\"description\\": \\"SDK for Cd\\",
  \\"homepage\\": \\"https://github.com/easyops-cn/next-core/tree/master/sdk/cd-sdk\\",
  \\"license\\": \\"GPL-3.0\\",
  \\"main\\": \\"dist/index.bundle.js\\",
  \\"module\\": \\"dist/index.esm.js\\",
  \\"typings\\": \\"dist/types/index.d.ts\\",
  \\"files\\": [
    \\"dist\\",
    \\"deploy\\"
  ],
  \\"scripts\\": {
    \\"clean\\": \\"rimraf dist\\",
    \\"prestart\\": \\"npm run clean\\",
    \\"start\\": \\"concurrently -k -n tsc,build \\\\\\"npm run start:types\\\\\\" \\\\\\"npm run start:rollup\\\\\\"\\",
    \\"start:rollup\\": \\"cross-env NODE_ENV='development' rollup --watch --config rollup.config.js\\",
    \\"start:types\\": \\"tsc --watch --emitDeclarationOnly --declaration --declarationDir dist/types\\",
    \\"prebuild\\": \\"npm run clean\\",
    \\"build\\": \\"npm run build:types && npm run build:rollup\\",
    \\"build:rollup\\": \\"cross-env NODE_ENV='production' rollup --config rollup.config.js\\",
    \\"build:types\\": \\"tsc --emitDeclarationOnly --declaration --declarationDir dist/types\\",
    \\"test\\": \\"cross-env NODE_ENV='test' jest\\",
    \\"test:ci\\": \\"cross-env NODE_ENV='test' CI=true jest\\"
  },
  \\"sideEffects\\": false,
  \\"peerDependencies\\": {
    \\"@next-core/brick-http\\": \\"*\\"
  }
}
",
  ],
]
`;
